HelloUltraviolet/Fixtures/RejectedSource/Permissions/UniqueInactiveUse/Expected.uv
//! Expected diagnostic metadata for the UniqueInactiveUse rejected-source specimen.

expectedDiagnostic("E-TYP-1602", "diagnostics.PermissionAdmissibility")
